--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <body>
         <div class="wrapper">
             <header>
-                <div id="tasklist">
-                    <ol><!--build Script file--></ol>
-                </div>
+                <h1>simple<span style='color:red;'>todo</span></h1>
             </header>
+            <div id="tasklist">
+                <ol><!--build Script file--></ol>
+            </div>
+            <form id="add-task">
+                <input type='text' placeholder= "ADD TASK...">
+            </form>
         </div>
     </body>
 <script>
