--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 <ol><!--build Script file--></ol>
             </div>
             <form id="add-task">
-                <input type='text' placeholder= "ADD TASK...">
+                <input type='text' placeholder= "TASK...">
+                <button>ADD</button>
             </form>
         </div>
     </body>
