--- a/index.html
+++ b/index.html
@@ -1,25 +1,63 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SIMPLETODO</title>
-    </head>
-    <body>
-        <div class="wrapper">
-            <header>
-                <h1>simple<span style='color:red;'>todo</span></h1>
-            </header>
-            <div id="tasklist">
-                <ol><!--build Script file--></ol>
-            </div>
-            <form id="add-task">
-                <input type='text' placeholder= "TASK...">
-                <button>ADD</button>
-            </form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
+    <title>SIMPLETODO</title>
+</head>
+<body>
+    <div class="wrapper">
+        <header>
+            <h1>SIMPLE<span style="color:red; ">TODO</span></h1>
+        </header>
+        <div id="task-list" style="text-transform: uppercase;">
+            <ol></ol>
         </div>
-    </body>
+        <form id="add-task">
+            <input type="text" placeholder="Add task">
+            <button>ADD</button>
+        </form>
+    </div>
 <script>
-    
+const taskList = document.querySelector("#task-list ol");
+const addTask = document.forms['add-task'];
+
+//delete Tasks
+taskList.addEventListener('click', function(e) {
+    if(e.target.className == 'delete') {
+        const li = e.target.parentElement;
+        li.parentNode.removeChild(li);
+    }
+})
+
+//add Tasks
+addTask.addEventListener('submit', function(e) {
+    e.preventDefault();
+
+    //capture value of input
+    const value = addTask.querySelector('input[type ="text"]').value;
+
+    //creating elements
+    const li = document.createElement('li');
+    const task = document.createElement('span');
+    const deleteBtn = document.createElement('span');
+
+    //add Content
+    task.textContent = value;
+    deleteBtn.textContent = ' | delete';
+    deleteBtn.style.color = 'red';
+
+    //add classes
+    deleteBtn.classList.add('delete');
+    task.classList.add('task');
+
+    //Nesting Elements in correct order
+    li.appendChild(task);
+    li.appendChild(deleteBtn);
+    taskList.appendChild(li);
+})
 </script>
+</body>
 </html>
