--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <title>SIMPLETODO</title>
-    <style>.delete {opacity: 0.50; color: red; cursor: pointer;}.delete:hover{opacity:1;}</style>
+    <style>
+        span {color:red;}
+        .delete {opacity: 0.50; color: red; cursor: pointer;}
+        .delete:hover{opacity:1;}
+    </style>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1>SIMPLE<span style="color:red; ">TODO</span></h1>
+            <h1>SIMPLE<span>TODO</span></h1>
         </header>
         <div id="task-list" style="text-transform: uppercase;">
             <ol></ol>
