--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SIMPLETODO</title>
     <style>
-        span {color:red;}
+        h1 span {color:red;}
         .delete {opacity: 0.50; color: red; cursor: pointer;}
         .delete:hover{opacity:1;}
     </style>
