[bug fix] Form Reset

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ addTask.addEventListener('submit', function(e) {
     
     //Append li to DOM
     taskList.appendChild(li);
+    this.reset();
 })
 </script>
 </body>
