Added File Downloader

--- a/index.html
+++ b/index.html
@@ -15,14 +15,24 @@
             <h1>SIMPLE<span>TODO</span></h1>
         </header>
         <div id="task-list" style="text-transform: uppercase;">
-            <ol></ol>
+            <ol>
+                <li>Send Opa $150</li>
+                <li>Pay CapOne - Bills</li>
+                <li>Purchase New Macbook Battery</li>
+                <li>Ideate social tasklist App (Similar Project Tasklist)</li>
+                <li>Pay Discover Bills</li>
+                <li>Pay Victoria Secret Card</li> 
+                <li>Read API Article</li>
+            </ol>
         </div>
         <form id="add-task">
             <input type="text" placeholder="Add task">
             <button>ADD</button>
         </form>
+        <button id='save'>Save</button>
     </div>
 <script>
+const wrapper = document.querySelector('.wrapper');
 const taskList = document.querySelector("#task-list ol");
 const addTask = document.forms['add-task'];
 
@@ -57,6 +67,16 @@ addTask.addEventListener('submit', function(e) {
     //Append li to DOM
     taskList.appendChild(li);
     this.reset();
+})
+
+//Save File
+const save = document.querySelector('#save');
+save.addEventListener('click', function() {
+    const saveLink = document.createElement('a');
+    const taskContent = taskList.innerHTML;
+    saveLink.href = `data:application/xml;charset=utf-8,${taskContent}" download="filename.html`
+    saveLink.innerHTML = 'File Ready to Download - Click Here';
+    wrapper.appendChild(saveLink);
 })
 </script>
 </body>
